# asmr-balance

./: .dockerignore  .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .typos.toml  Dockerfile  Justfile  LICENSE  README.md  cliff.toml  docker-compose.yml  lefthook.yml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: index.md
docs/adr/: 0001-streaming-analyzer-protocol.md  0002-kweighting-self-impl.md  0003-sample-rate-policy.md  0004-per-channel-metric-semantics.md  0005-channel-layout-policy.md  0006-band-split.md  0007-gate-threshold-expose.md  0008-strict-tooling-defensive-gates.md  0009-structured-logging.md  0010-release-automation.md  0011-signal-dag-redesign.md  0012-rule-algebra-verdict-semilattice.md  0013-dsp-science-upgrade.md  index.md
scripts/: run_mutmut.py
src/asmr_balance/: __init__.py  cli.py  config.py  decode.py  flags.py  logging.py  pipeline.py  stream.py  types.py
src/asmr_balance/algebra/: __init__.py  iir.py  reducer.py  semilattice.py
src/asmr_balance/analyzers/: __init__.py  band_imbalance.py  correlation_imbalance.py  lufs_imbalance.py  phase_coherence.py  sliding_imbalance.py
src/asmr_balance/config/: __init__.py  model.py  toml.py
src/asmr_balance/dsp/: __init__.py  bands.py  correlation.py  gating.py  kweight.py  lufs.py  phase.py  sliding.py
src/asmr_balance/graph/: __init__.py  builder.py  frozen.py  scheduler.py  types.py
src/asmr_balance/metrics/: __init__.py  band.py  correlation.py  dynamics.py  loudness.py  lra.py  phase.py  record.py  sliding.py  subtrees.py
src/asmr_balance/nodes/: __init__.py  bandsplit.py  kweighting.py  lowpass.py  oversample.py  zblocks.py
src/asmr_balance/rules/: __init__.py  algebra.py  builtin.py  thresholds.py
src/asmr_balance/scan/: __init__.py  assemble.py  parallel.py  pipeline.py
src/asmr_balance/sink/: __init__.py  base.py  html.py  parquet.py  tui.py
src/asmr_balance/source/: __init__.py  adt.py  layout.py  open.py
src/asmr_balance/source/backend/: __init__.py  dispatch.py  pyav.py  soundfile.py
tests/: _compat.py  conftest.py
tests/e2e/: test_scan_fixtures.py
tests/fixtures/: gen_fixtures.py
tests/legacy/e2e/: test_scan_fixtures.py
tests/legacy/fixtures/: gen_fixtures.py
tests/legacy/regression/: test_pyloudnorm_parity.py
tests/property/: test_lufs_props.py  test_semilattice_laws.py
tests/regression/: test_pyloudnorm_parity.py
tests/unit/: test_analyzers.py  test_bands.py  test_cli.py  test_config.py  test_correlation.py  test_coverage_gaps.py  test_decode.py  test_flags.py  test_gating.py  test_kweight.py  test_logging.py  test_logging_module.py  test_lufs.py  test_more_gaps.py  test_package.py  test_phase.py  test_pipeline.py  test_report_html.py  test_report_tui.py  test_report_writer.py  test_sliding.py  test_stream.py
tests/unit/algebra/: test_iir.py  test_semilattice.py
tests/unit/config/: test_config.py
tests/unit/graph/: test_builder.py  test_scheduler.py
tests/unit/metrics/: test_band.py  test_correlation.py  test_dynamics.py  test_loudness.py  test_lra.py  test_phase.py  test_record.py  test_sliding.py  test_subtrees.py
tests/unit/nodes/: test_bandsplit.py  test_kweighting.py  test_lowpass.py  test_oversample.py  test_zblocks.py
tests/unit/rules/: test_algebra.py  test_builtin.py  test_thresholds.py
tests/unit/scan/: test_parallel.py  test_pipeline.py
tests/unit/sink/: test_html.py  test_html_format.py  test_parquet.py  test_tui.py
tests/unit/source/: test_adt.py  test_layout.py  test_open.py  test_pyav_backend.py
